# Stasis

./: .gitignore  CMakeLists.txt  OS.iso  README.md  hint.md  linker.ld  run.bat
drivers/: ATA_IO.c  std_IO.c  vga.c
include/drivers/: ATA_IO.h  std_IO.h  vga.h
include/lib/: stdbool.h  stdstring.h
include/shell/: shell.h
iso/boot/grub/: grub.cfg
kernel/: kernel.c
lib/: stdbool.c  stdstring.c
shell/: shell.c
